An image for the Vision API post.

--- a/posts/2021-11-04-extracting-text-from-images-with-google-vision-api-and-r/index.qmd
+++ b/posts/2021-11-04-extracting-text-from-images-with-google-vision-api-and-r/index.qmd
@@ -2,6 +2,7 @@
 title: Extracting Text from Images with Google Vision API and R
 author: Matthew Henderson
 date: '2021-11-04'
+image: 'featured.jpg'
 slug: []
 categories:
   - ocr
