--- a/posts/2021-05-11-tidy-tuesday-internet-access/index.qmd
+++ b/posts/2021-05-11-tidy-tuesday-internet-access/index.qmd
@@ -146,5 +146,5 @@ and Cincinnati.
 
 Source code: https://github.com/MHenderson/internet-access
 
-![A plot comparing different ways of measuring internet access for people living in Kentucky](internet-access.png)
+![A plot comparing different ways of measuring internet access for people living in Kentucky](https://raw.githubusercontent.com/MHenderson/tt-internet-access/refs/tags/v0.1.0/plot/internet-access.png)
 
